--- a/src/app/scss/components.scss
+++ b/src/app/scss/components.scss
@@ -3,3 +3,5 @@
 @import '../../components/input/input';
 @import '../../components/modal/modal';
 @import '../../components/twoColComponent/twoColComponent';
+@import '../../components/form/form';
+@import '../../components/form-button/form-button';
