--- a/src/components/form/form.pug
+++ b/src/components/form/form.pug
@@ -1,5 +1,6 @@
 mixin form(props)
     form.form&attributes(attributes)
+        .form__statusMessage.form__statusMessage-error
         +input({name:"name", label:"Имя", placeholder:"Имя",required:true}).form__input
         +input({name:"surname", label:"Фамилия",placeholder:"Фамилия",required:true}).form__input
         +input({name:"phone", label:"Телефон",placeholder:"Телефон",required:true}).form__input
