--- a/src/components/form/form.scss
+++ b/src/components/form/form.scss
@@ -6,4 +6,14 @@
         margin-bottom: 20px;
     }
 
+    &__statusMessage{
+        margin-bottom: 20px;
+        color: green;
+
+        &-error{
+            color: red;
+        }
+    }
+
+
 }
