--- a/src/app/pug/components.pug
+++ b/src/app/pug/components.pug
@@ -5,3 +5,4 @@ include ../../components/modal/modal
 include ../../components/twoColComponent/twoColComponent
 include ../../components/form/form
 include ../../components/form-button/form-button
+include ../../components/mainSlider/mainSlider
