--- a/src/app/scss/components.scss
+++ b/src/app/scss/components.scss
@@ -5,3 +5,4 @@
 @import '../../components/twoColComponent/twoColComponent';
 @import '../../components/form/form';
 @import '../../components/form-button/form-button';
+@import '../../components/mainSlider/mainSlider';
